--- a/research/research.ipynb
+++ b/research/research.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DATA INGESTION\n"
+    "### DATA Transformation"
    ]
   },
   {
@@ -15,10 +15,30 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Fythonn\\\\fyt\\\\Main\\\\Project_4\\\\research'"
+       "2"
       ]
      },
      "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Fythonn\\\\fyt\\\\Main\\\\Project_4\\\\research'"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "os.chdir(\"../\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,78 +69,32 @@
        "'c:\\\\Fythonn\\\\fyt\\\\Main\\\\Project_4'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.chdir(\"../\")\n",
     "%pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
+    "\n",
     "@dataclass\n",
-    "class DataIngestionConfig:\n",
+    "class DataTransformationConfig:\n",
     "    root_dir: Path\n",
-    "    source_URL: Path\n",
-    "    local_data_file: Path\n",
-    "    unzip_dir: Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.textSummarizer.constants import *\n",
-    "from src.textSummarizer.utils.common import read_yaml, create_directories"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Configuration manager"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ConfigurationManager:\n",
-    "    def __init__(self,\n",
-    "                 config_path=CONFIG_FILE_PATH,\n",
-    "                 params_filepath=PARAMS_FILE_PATH):\n",
-    "        self.config=read_yaml(config_path)\n",
-    "        self.paramss=read_yaml(params_filepath)\n",
+    "    datadir: Path\n",
+    "    tokenizer_name: Path\n",
     "\n",
-    "        create_directories([self.config.artifacts_root])\n",
-    "\n",
-    "    def get_data_ingestion_config(self)-> DataIngestionConfig:\n",
-    "        config=self.config.data_ingestion\n",
-    "        create_directories([config.root_dir])\n",
-    "\n",
-    "        data_ingestion_config=DataIngestionConfig(\n",
-    "            root_dir=config.root_dir,\n",
-    "            source_URL=config.source_URL,\n",
-    "            local_data_file=config.local_data_file,\n",
-    "            unzip_dir=config.unzip_dir\n",
-    "\n",
-    "        )\n",
-    "\n",
-    "        return data_ingestion_config"
+    "    "
    ]
   },
   {
@@ -119,18 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import zipfile\n",
-    "import urllib.request as request  # Fix import for urlretrieve\n",
-    "from src.textSummarizer.logging import logger\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Components"
+    "from src.textSummarizer.constants import *\n",
+    "from src.textSummarizer.utils.common import read_yaml, create_directories\n",
+    " "
    ]
   },
   {
@@ -139,78 +114,132 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DataIngestion:\n",
-    "    def __init__(self,config:DataIngestionConfig):\n",
-    "        self.config=config\n",
+    "from venv import create\n",
+    "from pyparsing import C\n",
     "\n",
-    "    def download_file(self):\n",
-    "        if not os.path.exists(self.config.local_data_file):\n",
-    "            filename, headers = request.urlretrieve(\n",
-    "                url = self.config.source_URL,\n",
-    "                filename = self.config.local_data_file\n",
-    "            )\n",
-    "            logger.info(f\"File is downloaded\")\n",
-    "        else:\n",
-    "            logger.info(f\"File already exits\")\n",
     "\n",
-    "    def extract_zip_file(self):\n",
-    "        \"\"\"\n",
-    "        zip_file_path: str\n",
-    "        Extracts the zip file into the data directory\n",
-    "        Function returns None\n",
-    "        \"\"\"\n",
-    "        unzip_path = self.config.unzip_dir\n",
-    "        os.makedirs(unzip_path, exist_ok=True)\n",
-    "        with zipfile.ZipFile(self.config.local_data_file, 'r') as zip_ref:\n",
-    "            zip_ref.extractall(unzip_path)"
+    "class ConfigurationManager:\n",
+    "    def __init__(self,\n",
+    "                 config_path = CONFIG_FILE_PATH,\n",
+    "                 params_filepaths = PARAMS_FILE_PATH):\n",
+    "        self.config = read_yaml(config_path)\n",
+    "        self.params = read_yaml(params_filepaths)\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_data_transformation_config(self) -> DataTransformationConfig:\n",
+    "        config = self.config.data_transformation\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        data_transformation_config = DataTransformationConfig(\n",
+    "            root_dir = config.root_dir,\n",
+    "            datadir = config.data_path,\n",
+    "            tokenizer_name = config.tokenizer_name\n",
+    "        )\n",
+    "        \n",
+    "        return data_transformation_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "from src.textSummarizer.logging import logger\n",
+    "from transformers import AutoTokenizer\n",
+    "from datasets import load_from_disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DataTransformation:\n",
+    "    def __init__(self, config: DataTransformationConfig):\n",
+    "        self.config = config\n",
+    "        self.tokenizer = AutoTokenizer.from_pretrained(self.config.tokenizer_name)\n",
+    "\n",
+    "    def convert_examples_to_features(self, examples):\n",
+    "        input_encodings = self.tokenizer(examples[\"dialogue\"], truncation=True, padding=\"max_length\", max_length=512)\n",
+    "\n",
+    "        with self.tokenizer.as_target_tokenizer():\n",
+    "             target_encodings = self.tokenizer(examples[\"summary\"], truncation=True, padding=\"max_length\", max_length=150)\n",
+    "\n",
+    "        return {\n",
+    "            'input_ids': input_encodings['input_ids'],\n",
+    "            'attention_mask': input_encodings['attention_mask'],\n",
+    "            'labels': target_encodings['input_ids']\n",
+    "        }\n",
+    "    \n",
+    "    def convert(self):\n",
+    "        dataset_samsum = load_from_disk(self.config.datadir)\n",
+    "        dataset_samsum_pt= dataset_samsum.map(self.convert_examples_to_features, batched=True)\n",
+    "        return dataset_samsum_pt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-02-12 16:34:03,285: INFO: common: yaml file: c:\\Fythonn\\fyt\\Main\\Project_4\\config\\config.yaml loaded successfully]\n",
-      "[2025-02-12 16:34:03,293: INFO: common: yaml file: c:\\Fythonn\\fyt\\Main\\Project_4\\params.yaml loaded successfully]\n",
-      "[2025-02-12 16:34:03,299: INFO: common: created directory at: artifacts]\n",
-      "[2025-02-12 16:34:03,305: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2025-02-12 16:34:03,309: INFO: 1315043347: File already exits]\n"
+      "[2025-02-26 14:02:06,504: INFO: common: yaml file: c:\\Fythonn\\fyt\\Main\\Project_4\\config\\config.yaml loaded successfully]\n",
+      "[2025-02-26 14:02:06,510: INFO: common: yaml file: c:\\Fythonn\\fyt\\Main\\Project_4\\params.yaml loaded successfully]\n",
+      "[2025-02-26 14:02:06,514: INFO: common: created directory at: artifacts]\n",
+      "[2025-02-26 14:02:06,519: INFO: common: created directory at: artifacts/data_transformation]\n"
      ]
     },
     {
-     "ename": "BadZipFile",
-     "evalue": "File is not a zip file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 6\u001b[0m\n\u001b[0;32m      3\u001b[0m data_ingestion\u001b[38;5;241m=\u001b[39mDataIngestion(config\u001b[38;5;241m=\u001b[39mdata_ingestion_config)\n\u001b[0;32m      5\u001b[0m data_ingestion\u001b[38;5;241m.\u001b[39mdownload_file()\n\u001b[1;32m----> 6\u001b[0m \u001b[43mdata_ingestion\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mextract_zip_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[7], line 23\u001b[0m, in \u001b[0;36mDataIngestion.extract_zip_file\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     21\u001b[0m unzip_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39munzip_dir\n\u001b[0;32m     22\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(unzip_path, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 23\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[43mzipfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mZipFile\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlocal_data_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m zip_ref:\n\u001b[0;32m     24\u001b[0m     zip_ref\u001b[38;5;241m.\u001b[39mextractall(unzip_path)\n",
-      "File \u001b[1;32mc:\\Fythonn\\fyt\\Main\\Project_4\\venv\\lib\\zipfile.py:1272\u001b[0m, in \u001b[0;36mZipFile.__init__\u001b[1;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps)\u001b[0m\n\u001b[0;32m   1270\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1271\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m-> 1272\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_RealGetContents\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1273\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m mode \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m   1274\u001b[0m         \u001b[38;5;66;03m# set the modified flag so central directory gets written\u001b[39;00m\n\u001b[0;32m   1275\u001b[0m         \u001b[38;5;66;03m# even if no files are added to the archive\u001b[39;00m\n\u001b[0;32m   1276\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_didModify \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Fythonn\\fyt\\Main\\Project_4\\venv\\lib\\zipfile.py:1339\u001b[0m, in \u001b[0;36mZipFile._RealGetContents\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1337\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1338\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m endrec:\n\u001b[1;32m-> 1339\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m BadZipFile(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFile is not a zip file\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1340\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdebug \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1341\u001b[0m     \u001b[38;5;28mprint\u001b[39m(endrec)\n",
-      "\u001b[1;31mBadZipFile\u001b[0m: File is not a zip file"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Fythonn\\fyt\\Main\\Project_4\\venv\\lib\\site-packages\\huggingface_hub\\file_download.py:140: UserWarning: `huggingface_hub` cache-system uses symlinks by default to efficiently store duplicated files but your machine does not support them in C:\\Users\\Admin\\.cache\\huggingface\\hub\\models--google--pegasus-cnn_dailymail. Caching files will still work but in a degraded version that might require more space on your disk. This warning can be disabled by setting the `HF_HUB_DISABLE_SYMLINKS_WARNING` environment variable. For more details, see https://huggingface.co/docs/huggingface_hub/how-to-cache#limitations.\n",
+      "To support symlinks on Windows, you either need to activate Developer Mode or to run Python as an administrator. In order to activate developer mode, see this article: https://docs.microsoft.com/en-us/windows/apps/get-started/enable-your-device-for-development\n",
+      "  warnings.warn(message)\n",
+      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]c:\\Fythonn\\fyt\\Main\\Project_4\\venv\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3961: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  warnings.warn(\n",
+      "Map: 100%|██████████| 14732/14732 [00:14<00:00, 1013.24 examples/s]\n",
+      "Map: 100%|██████████| 819/819 [00:00<00:00, 1053.65 examples/s]\n",
+      "Map: 100%|██████████| 818/818 [00:00<00:00, 925.12 examples/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['id', 'dialogue', 'summary', 'input_ids', 'attention_mask', 'labels'],\n",
+       "        num_rows: 14732\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['id', 'dialogue', 'summary', 'input_ids', 'attention_mask', 'labels'],\n",
+       "        num_rows: 819\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['id', 'dialogue', 'summary', 'input_ids', 'attention_mask', 'labels'],\n",
+       "        num_rows: 818\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "config=ConfigurationManager()\n",
-    "data_ingestion_config=config.get_data_ingestion_config()\n",
-    "data_ingestion=DataIngestion(config=data_ingestion_config)\n",
-    "\n",
-    "data_ingestion.download_file()\n",
-    "data_ingestion.extract_zip_file()"
+    "config = ConfigurationManager()\n",
+    "data_tranformation_config= config.get_data_transformation_config()\n",
+    "data_tranformation = DataTransformation(data_tranformation_config)\n",
+    "data_tranformation.convert()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
